export class Building {
  code!: string;
  designation!: string;
  description!: string;
  length!: number;
  width!: number;
  height!: number;
}
