export class Robot {
  robotCode!: string;
  nickName!: string;
  robotType!: string;
  serialNr!: string;
  description!: string;
  state?: string;
}
