@startuml Domain Model

title "Domain Model"
' left to right direction
' top to bottom direction
skinparam Padding 10
skinparam Nodesep 80
skinparam ranksep 100
skinparam groupInheritance 1
' skinparam linetype ortho
skinparam separation 1000
skinparam NoteBackgroundColor #A9A9A9
skinparam PackageStyle rectangle
skinparam package {
    BackgroundColor #D3D3D3
    FontStyle bold
}

hide circle
hide methods

    entity Robot {
        -serialNumber
        -code
        -state
        -nickname
        -description
    }

    entity RobotType {
        - typeName
        - brand
        - model
    }

    enum TaskType {}
    note bottom of TaskType {
            - Vigilance
            - PickupDelivery
    }

    interface Task {
        - code
        - description

    }

    entity VigilanceTask {
        - emergencyNumber
    }

    entity PickupDeliveryTask {
        - senderName
        - receiverName
        - senderContact
        - receiverContact
        - confirmationCode
    }

    entity Building {
        - code
        - name
        - description
        - dimensions
    }

    entity Floor {
        - floorNr
        - description
        - floorMap
    }

    entity Elevator {
        - identificationNumber
        - brand
        - model
        - serialNumber
        - description
    }

    entity Room {
        - name
        - description
    }

    enum RoomCategory {}

    note bottom of RoomCategory {
            - Classroom
            - Office
            - Laboratory
            - Auditorium
    }

    entity Pathway {
    }

VigilanceTask ..|> Task: extends
PickupDeliveryTask ..|> Task: extends

Room --> RoomCategory: is of a
Room --> Building : is in

RobotType --> "*" TaskType: executes

Floor --> Building: is on
Floor "*" <-- Elevator : serves
Floor <-- Room: is on

Elevator --> Building: is on

PickupDeliveryTask --> Room: delivery
PickupDeliveryTask --> Room: pickup

VigilanceTask --> Floor: is executed on

Pathway --> "2" Floor: connects

Robot --> RobotType : is of a

Task --> TaskType : is of a

Robot ..> "*" Task : executes

@enduml
